[package]
name = "pi-estimator"
version = "0.1.0"
edition = "2025"

[dependencies]
axum = "0.8.7"
tokio = { version = "1", features = ["full"] }
rand = "0.9.2"
rand_pcg = "0.9.0"
tower-http = { version = "0.6.7", features = ["fs"] }

[dev-dependencies]
reqwest = { version = "0.12.24", features = ["json"] }
tokio = { version = "1", features = ["full"] }