[package]
name = "pi-estimator"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
tokio = { version = "1", features = ["full"] }
rand = "0.9.2"
tower-http = { version = "0.6.7", features = ["fs"] }
serde = { version = "1.0.214", features = ["derive"] }
tokio-stream = "0.1.17"
bytes = "1.6.1"

[dev-dependencies]
reqwest = { version = "0.12.24", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5.1", features = ["util"] }
http-body-util = "0.1.2"